--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 body{
-    background-color: rgb(255, 255, 255);
-    ba
+    background-color:#48717A ;
+    font-family: "Winky Sans", sans-serif; 
 }
 nav{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: ;
-    color: ;
+    font-family: "Winky Sans", sans-serif;
 }
 .logo{
     width: 150px;
@@ -22,12 +21,13 @@ a {
     text-decoration: none;
 }
 div{
-    background-color: rgb(233, 233, 233);
-    background-color: rgb(102, 71, 131);
+    background-color:#577E8A ;
+    background-color:#7DA3CC ;
 }
 .tarjeta{
     display: flex;
     justify-content: center;
+    font-family: "Winky Sans", sans-serif;
 }
 .card{
     margin: 20px;
@@ -35,6 +35,57 @@ div{
     border-radius: 20px;
     overflow: hidden;
 
-    box-shadow: ;
-    font-family: 0px 5px 10px #000000;
+    box-shadow:0px 5px 10px #000000;
+    font-family: "Winky Sans", sans-serif; 
+} 
+.card img {
+    width: 100%;
+}
+.card1{
+    text-align: center;
+    font-size: 20px;
+    color: aqua;
+    font-family: "Winky Sans", sans-serif;
+}
+.card2{
+    font-size: 25px;
+}
+.card :hover{
+    background-color: aliceblue;
+    transform: scale(1.05);
+    font-family: "Winky Sans", sans-serif;
+}
+.footer {
+    padding: 25px;
+    text-align: center;
+    text-decoration: none;
+    font-family: "Winky Sans", sans-serif;
+}
+.footer a{
+    text-decoration: none;
+    font-family: "Winky Sans", sans-serif; 
+}
+.card-content{
+    padding: 10px;
+    font-family: "Winky Sans", sans-serif; 
+}
+
+.producto img{
+    width: 20%;
+}
+.producto {
+    text-align: justify;
+    font-size: 20px;
+    color: rgb(16, 19, 18);
+    font-family: "Winky Sans", sans-serif; 
+}
+.local1 img{
+    width: 20%;
+
+}
+.local1 {
+    text-align: center;
+    font-size: 2px;
+    color: #000000;
+    font-family:"Winky Sans", sans-serif ;
 }
